# BSPPN

./: README.md  building.py  coco.py  model.py  suppixpool_layer.py  utils.py  visualize.py
BSP/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  project_bsp
BSP/BSP/: BSP.h  BSPNode.h
BSP/EdgeDetection/: CannyEdge.h
BSP/RANSAC/: RANSAC.h
BSP/RANSAC/geom/: LineSegment2_RANSAC.h
BSP/data/input/: RGB-PanSharpen_AOI_3_Paris_img361.tif  RGB-PanSharpen_AOI_3_Paris_img550.tif  bounding_boxes.txt  temp1.tif  temp11.tif  temp2.tif  temp3.tif  temp4.tif  temp5.tif  temp_1.tif
BSP/data/output/: image_1.tif  (+4 more)
BSP/geom/: LineSegment2.h  LinearRing2.h  Polygon2.h  Vector2.h
BSP/io/: BoundingBoxReader.h  ImageWriter.h
BSP_img/: CMakeCache.txt  CMakeLists (original).txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  project_bsp
BSP_img/BSP/: BSPTree.h  Filter.h
BSP_img/RANSAC/: RANSAC.h
BSP_img/RANSAC/geom/: Point2_RANSAC.h
BSP_img/data/input/: image1.tif  temp1.tif  temp2.tif  temp3.tif  temp4.tif  temp5.tif  temp_1.tif
BSP_img/data/output/: image_1.tif  image_2.tif  image_3.tif  image_4.tif  image_5.tif
BSP_img/data/output/tmp/: image_0.tif  image_0_2_CannyEdge.tif  image_0_3_LineSegmentsForBSP.tif  image_0_6_BSP.tif  temp.tif
BSP_img/geom/: Line2.h  Point2.h
BSP_img/util/: Util.h
SuperPixelPool-pytorch-update/: RGB-PanSharpen_AOI_3_Paris_img829.tif  simple_test_MNIST.py  suppixpool_layer.py  test_GPUpool.py
SuperPixelPool-pytorch-update/suppixpool_CUDA.egg-info/: SOURCES.txt
suppixpool_CUDA.egg-info/: PKG-INFO  SOURCES.txt
(+5 files in other folders)
